--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ $RECYCLE.BIN/
 Thumbs.db
 UserInterfaceState.xcuserstate
 
-src/app/app.firebase.config.ts
+src/app/app.firebase.config.json
+functions/app.firebase.config.json
